--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="container">
-    <h2 class="text-center mb-4">📝 Bài kiểm tra Tự luận – Kế toán THPT</h2>
+    <h2 class="text-center mb-4">📝 Bài kiểm tra Kế toán</h2>
 
     <!-- Form nhập thông tin học sinh -->
     <div id="formThongTin" class="card shadow">
