--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="vi">
 <head>
@@ -15,48 +14,27 @@
   <div class="container">
     <h2 class="text-center mb-4">📝 Bài kiểm tra Tự luận – Kế toán THPT</h2>
 
-    <!-- Form nhập thông tin học sinh -->
-    <div id="formThongTin" class="card shadow">
+    <div class="card shadow">
+      <div class="card-header bg-primary text-white">
+        Câu hỏi <span id="soCau"></span>
+      </div>
       <div class="card-body">
-        <h5>🎓 Nhập thông tin học sinh</h5>
-        <div class="mb-3">
-          <label class="form-label">Họ và tên</label>
-          <input type="text" id="tenHS" class="form-control" required>
-        </div>
-        <div class="mb-3">
-          <label class="form-label">Mã số học sinh</label>
-          <input type="text" id="maSoHS" class="form-control" required>
-        </div>
-        <button class="btn btn-primary" onclick="batDau()">Bắt đầu làm bài</button>
-      </div>
-    </div>
-
-    <!-- Giao diện làm bài -->
-    <div id="giaoDienBaiLam" class="d-none">
-      <div class="card shadow">
-        <div class="card-header bg-primary text-white">
-          Câu hỏi <span id="soCau"></span>
-        </div>
-        <div class="card-body">
-          <p id="cauHoi" class="fw-semibold"></p>
-          <label for="traLoi" class="form-label">✍️ Nhập câu trả lời:</label>
-          <textarea id="traLoi" class="form-control" rows="5"></textarea>
-          <div class="mt-3">
-            <button class="btn btn-success" onclick="kiemTra()">Kiểm tra</button>
-            <button class="btn btn-secondary d-none" id="btnTiep" onclick="cauTiepTheo()">Tiếp theo</button>
-          </div>
-        </div>
-      </div>
-
-      <div id="ketQuaCard" class="card shadow mt-3 d-none">
-        <div class="card-body">
-          <h5 class="card-title">📊 Kết quả:</h5>
-          <p id="ketQua" class="card-text"></p>
+        <p id="cauHoi" class="fw-semibold"></p>
+        <label for="traLoi" class="form-label">✍️ Nhập câu trả lời của bạn:</label>
+        <textarea id="traLoi" class="form-control" rows="5"></textarea>
+        <div class="mt-3">
+          <button class="btn btn-success" onclick="kiemTra()">Kiểm tra</button>
+          <button class="btn btn-secondary d-none" id="btnTiep" onclick="cauTiepTheo()">Câu tiếp theo</button>
         </div>
       </div>
     </div>
 
-
+    <div id="ketQuaCard" class="card shadow mt-3 d-none">
+      <div class="card-body">
+        <h5 class="card-title">📊 Kết quả:</h5>
+        <p id="ketQua" class="card-text"></p>
+      </div>
+    </div>
   </div>
 
   <script>
@@ -80,38 +58,21 @@
     ];
 
     let chiSo = 0;
-    let soCauDung = 0;
-    let hocSinh = { ten: "", maSo: "" };
-
-    function batDau() {
-      const ten = document.getElementById("tenHS").value.trim();
-      const maSo = document.getElementById("maSoHS").value.trim();
-
-      if (!ten || !maSo) {
-        alert("Vui lòng nhập đầy đủ thông tin học sinh.");
-        return;
-      }
-
-      hocSinh.ten = ten;
-      hocSinh.maSo = maSo;
-
-      document.getElementById("formThongTin").classList.add("d-none");
-      document.getElementById("giaoDienBaiLam").classList.remove("d-none");
-
-      hienThiCauHoi();
-    }
 
     function hienThiCauHoi() {
       document.getElementById("traLoi").value = "";
       document.getElementById("ketQua").innerText = "";
       document.getElementById("btnTiep").classList.add("d-none");
-      document.getElementById("ketQuaCard").classList.add("d-none");
+document.getElementById("ketQuaCard").classList.add("d-none");
 
       if (chiSo < boDe.length) {
         document.getElementById("soCau").innerText = `${chiSo + 1} / ${boDe.length}`;
         document.getElementById("cauHoi").innerText = boDe[chiSo].cauHoi;
       } else {
-        hienThiKetQuaTong();
+        document.querySelector(".container").innerHTML = `
+          <div class="alert alert-success text-center" role="alert">
+            🎉 Bạn đã hoàn thành bài kiểm tra! Chúc mừng!
+          </div>`;
       }
     }
 
@@ -128,14 +89,9 @@
       const doGiong = tinhDoGiong(traLoi, dapAn);
       let danhGia = "";
 
-      if (doGiong > 0.8) {
-        danhGia = `<span class="text-success fw-bold">✅ Đúng!</span>`;
-        soCauDung++;
-      } else if (doGiong > 0.5) {
-        danhGia = `<span class="text-warning fw-bold">🟡 Gần đúng.</span> Bạn nên bổ sung thêm nội dung.`;
-      } else {
-        danhGia = `<span class="text-danger fw-bold">❌ Sai.</span> Gợi ý: <em>${dapAn}</em>`;
-      }
+      if (doGiong > 0.8) danhGia = `<span class="text-success fw-bold">✅ Đúng!</span>`;
+      else if (doGiong > 0.5) danhGia = `<span class="text-warning fw-bold">🟡 Gần đúng.</span> Bạn nên bổ sung thêm nội dung.`;
+      else danhGia = `<span class="text-danger fw-bold">❌ Sai.</span> Gợi ý đáp án: <em>${dapAn}</em>`;
 
       document.getElementById("ketQua").innerHTML = danhGia;
       document.getElementById("btnTiep").classList.remove("d-none");
@@ -147,77 +103,7 @@
       hienThiCauHoi();
     }
 
-    function hienThiKetQuaTong() {
-      const tong = boDe.length;
-      const diem = ((soCauDung / tong) * 10).toFixed(1);
-
-      const ketQuaCuoi = {
-        ten: hocSinh.ten,
-        maSo: hocSinh.maSo,
-        soCauDung,
-        tong,
-        diem
-      };
-
-      localStorage.setItem("ketQuaKeToan", JSON.stringify(ketQuaCuoi));
-
-      let danhSach = JSON.parse(localStorage.getItem("danhSachKetQua")) || [];
-      danhSach.push(ketQuaCuoi);
-      localStorage.setItem("danhSachKetQua", JSON.stringify(danhSach));
-
-      document.querySelector(".container").innerHTML = `
-        <div class="alert alert-success text-center" role="alert">
-          🎉 <strong>${ketQuaCuoi.ten}</strong> (Mã số: ${ketQuaCuoi.maSo})<br>
-          Bạn đã hoàn thành bài kiểm tra!<br>
-          ✅ Số câu đúng: ${ketQuaCuoi.soCauDung}/${ketQuaCuoi.tong} <br>
-          🏅 Điểm: <strong>${ketQuaCuoi.diem}/10</strong>
-        </div>`;
-    }
-
-    function xemKetQua() {
-      const ds = JSON.parse(localStorage.getItem("danhSachKetQua")) || [];
-      const tbody = document.getElementById("noiDungBang");
-      tbody.innerHTML = "";
-
-      if (ds.length === 0) {
-        tbody.innerHTML = "<tr><td colspan='6' class='text-center'>Chưa có dữ liệu.</td></tr>";
-      } else {
-        ds.forEach((hs, i) => {
-          tbody.innerHTML += `
-            <tr>
-              <td>${i + 1}</td>
-              <td>${hs.ten}</td>
-              <td>${hs.maSo}</td>
-              <td>${hs.soCauDung}</td>
-              <td>${hs.tong}</td>
-              <td>${hs.diem}</td>
-            </tr>
-          `;
-        });
-      }
-
-      document.getElementById("bangKetQua").classList.remove("d-none");
-    }
-
-    function xuatFile() {
-      const ds = JSON.parse(localStorage.getItem("danhSachKetQua")) || [];
-      if (ds.length === 0) {
-        alert("Chưa có dữ liệu để xuất.");
-        return;
-      }
-
-      let text = "KẾT QUẢ HỌC SINH\n====================\n";
-      ds.forEach((hs, i) => {
-        text += `${i + 1}. ${hs.ten} - ${hs.maSo} | Đúng: ${hs.soCauDung}/${hs.tong} | Điểm: ${hs.diem}\n`;
-      });
-
-      const blob = new Blob([text], { type: "text/plain" });
-      const link = document.createElement("a");
-      link.href = URL.createObjectURL(blob);
-      link.download = "ketqua_hocsinh.txt";
-      link.click();
-    }
+    hienThiCauHoi();
   </script>
 </body>
 </html>
-
