--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ document.getElementById("ketQuaCard").classList.add("d-none");
 
       if (doGiong > 0.8) danhGia = `<span class="text-success fw-bold">✅ Đúng!</span>`;
       else if (doGiong > 0.5) danhGia = `<span class="text-warning fw-bold">🟡 Gần đúng.</span> Bạn nên bổ sung thêm nội dung.`;
-      else danhGia = `<span class="text-danger fw-bold">❌ Sai.</span>  ;
+      else danhGia = `<span class="text-danger fw-bold">❌ Sai.;
 
       document.getElementById("ketQua").innerHTML = danhGia;
       document.getElementById("btnTiep").classList.remove("d-none");
