--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <script>
     const boDe = [
       {
-        cauHoi: "Tính tổng 2+2=.",
+        cauHoi: "Tính tổng 2+2=",
         dapAn: "4"
       },
       {
