--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="container">
-    <h2 class="text-center mb-4">📝 Bài kiểm tra Kế toán </h2>
+    <h2 class="text-center mb-4">📝 Bài kiểm tra Tự luận – Kế toán THPT</h2>
 
     <div class="card shadow">
       <div class="card-header bg-primary text-white">
@@ -40,20 +40,20 @@
   <script>
     const boDe = [
       {
-        cauHoi: "Tính tổng 2+2=",
-        dapAn: "4"
+        cauHoi: "Phân biệt tài sản ngắn hạn và tài sản dài hạn trong kế toán.",
+        dapAn: "Tài sản ngắn hạn là tài sản có thời gian sử dụng hoặc thu hồi trong vòng một năm. Tài sản dài hạn là tài sản có thời gian sử dụng hoặc thu hồi trên một năm."
       },
       {
-        cauHoi: "Tính 100:5=",
-        dapAn: "20"
+        cauHoi: "Trình bày khái niệm và vai trò của bảng cân đối kế toán.",
+        dapAn: "Bảng cân đối kế toán là báo cáo tài chính phản ánh tình hình tài sản, nợ phải trả và vốn chủ sở hữu của doanh nghiệp tại một thời điểm. Nó giúp đánh giá khả năng tài chính và cấu trúc tài sản của doanh nghiệp."
       },
       {
-        cauHoi: "Tính 2^2 + 4=",
-        dapAn: "8"
+        cauHoi: "Chi phí sản xuất gồm những yếu tố nào?",
+        dapAn: "Chi phí sản xuất gồm nguyên vật liệu trực tiếp, nhân công trực tiếp và chi phí sản xuất chung."
       },
       {
-        cauHoi: "3^2 +100:5=",
-        dapAn: "29"
+        cauHoi: "Trình bày nguyên tắc ghi sổ kép trong kế toán.",
+        dapAn: "Nguyên tắc ghi sổ kép yêu cầu mỗi nghiệp vụ kinh tế phải được ghi nhận vào ít nhất hai tài khoản: một tài khoản ghi Nợ và một tài khoản ghi Có, với tổng số tiền Nợ bằng tổng số tiền Có."
       }
     ];
 
@@ -91,7 +91,7 @@ document.getElementById("ketQuaCard").classList.add("d-none");
 
       if (doGiong > 0.8) danhGia = `<span class="text-success fw-bold">✅ Đúng!</span>`;
       else if (doGiong > 0.5) danhGia = `<span class="text-warning fw-bold">🟡 Gần đúng.</span> Bạn nên bổ sung thêm nội dung.`;
-      else danhGia = `<span class="text-danger fw-bold">❌ Sai.;
+      else danhGia = `<span class="text-danger fw-bold">❌ Sai.</span> Gợi ý đáp án: <em>${dapAn}</em>`;
 
       document.getElementById("ketQua").innerHTML = danhGia;
       document.getElementById("btnTiep").classList.remove("d-none");
