--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       } else if (maxGiong > 0.5) {
         danhGia = `<span class="text-warning fw-bold">🟡 Gần đúng.</span> Bạn nên bổ sung thêm nội dung.`;
       } else {
-        danhGia = `<span class="text-danger fw-bold">❌ Sai.</span> Gợi ý đáp án: <em>${dapAnDung}</em>`;
+        danhGia = `<span class="text-danger fw-bold">❌ Sai.</span> `;
       }
 
       document.getElementById("ketQua").innerHTML = danhGia;
